--- a/css/style.css
+++ b/css/style.css
@@ -654,7 +654,10 @@ h1, h2, h3, h4, h5,
     content: "";
     position: absolute;
     background-image: url(../images/bg1.jpg);
-    background-size: contain;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
     top: 0;
     left: 0;
     right: 0;
@@ -853,9 +856,9 @@ h1, h2, h3, h4, h5,
       color: #ff7c67; }
 
 .days {
-  width: 100%;
+ 
   padding: 0;
-  margin: 0 0 50px 0; }
+  margin:0; }
   .days li {
     text-align: center;
     display: inline-block;
